# rustykeyer

./: .gitignore  CH32V003_BAREMENTAL_ANALYSIS.md  CH32V203_MEMORY_ANALYSIS.md  Cargo.toml  LICENSE  README.en.md  README.md  SESSION_FINAL_SUMMARY.md  keyer.rs  keyer_debug  main.rs
.kiro/specs/keyer-main/: design.en.md  design.md  requirements.en.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: README.md  README_EN.md
docs/api/: keyer-core-api-en.md  keyer-core-api.md
docs/archive/: CH32V003_FSM_REDESIGN_SESSION.md  CURRENT_ISSUES_ANALYSIS.md  NEXT_SESSION_QUICK_START.md  SESSION_BAREMENTAL_SUMMARY.md  SESSION_PROGRESS_SUMMARY.md  TEST_REPORT.md
docs/hardware/: CH32V003_BAREMENTAL_GUIDE.md  CH32V003_BAREMENTAL_GUIDE_EN.md  CH32V003_CIRCUIT_DIAGRAM.md  CH32V003_CIRCUIT_DIAGRAM_EN.md
firmware/: Cargo.toml  build.rs  memory.x
firmware-ch32v003/: Cargo.toml  build.rs  memory.x
firmware-ch32v003/.cargo/: config.toml
firmware-ch32v003/src/: main.rs
firmware/.cargo/: config.toml
firmware/src/: ch32v003_hardware.rs  ch32v203_hardware.rs  lib.rs  main.rs  time_driver.rs
keyer-core/: Cargo.toml
keyer-core/src/: controller.rs  fsm.rs  hal.rs  hal_tests.rs  lib.rs  test_utils.rs  types.rs
tests/: Cargo.toml
tests/benches/: timing_precision.rs
tests/src/: embassy_tests.rs  lib.rs  main.rs  mode_behavior_tests.rs  squeeze_tests.rs
