[workspace]
members = [
    "keyer-core",
    "firmware", 
    "firmware-ch32v003"
]
resolver = "2"

[workspace.dependencies]
embassy-time = { version = "0.3" }
embassy-executor = { version = "0.6", features = ["task-arena-size-1024"] }
embedded-hal = "1.0"
heapless = { version = "0.8", default-features = false }
defmt = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Removed obsolete test dependencies

# Override problematic dependencies  
portable-atomic = { version = "1.0", default-features = false, features = ["critical-section"] }

[workspace.metadata]
docs = "https://docs.rs/rustykeyer"
repository = "https://github.com/rustykeyer/rustykeyer"
license = "MIT"

[profile.release]
debug = 2
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2
panic = "abort"