[package]
name = "rustykeyer-firmware"
version = "0.1.0"
edition = "2021"
description = "CH32V203 iambic keyer firmware"

[dependencies]
keyer-core = { path = "../keyer-core", features = ["embassy-time"] }
embassy-executor = { workspace = true, features = ["arch-riscv32", "executor-thread"] }
embassy-time = { workspace = true, features = ["generic-queue-8"] }
embassy-sync = "0.6"
embedded-hal = { workspace = true }
heapless = { workspace = true }
defmt = { workspace = true, optional = true }
defmt-rtt = { version = "0.4", optional = true }
riscv = "0.10"
riscv-rt = "0.11"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-halt = "0.2"
static_cell = "2.1"
portable-atomic = { workspace = true }
critical-section = { version = "1.1", features = ["restore-state-u8"] }
embassy-time-driver = "0.1"

# CH32V HAL (placeholder - adjust based on actual HAL crate)
# ch32v2-hal = { version = "0.1", features = ["ch32v203", "rt"] }
# Alternative: ch32-hal = { version = "0.1", features = ["ch32v203"] }

[features]
default = []
defmt = ["dep:defmt", "defmt-rtt"]
embedded = ["defmt"]

[lib]
name = "rustykeyer_firmware"
path = "src/lib.rs"

[[bin]]
name = "keyer-v203"
path = "src/main.rs"
test = false
bench = false

